--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,12 @@
 			<artifactId>taglibs-standard-jstlel</artifactId>
 			<version>1.2.5</version>
 		</dependency>
+
+		<dependency>
+			<groupId>com.navercorp.lucy</groupId>
+			<artifactId>lucy-xss-servlet</artifactId>
+			<version>2.0.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
